Mar 01 2004  devel  Tweaked error reporting to client.
                    Fixed wtapfile support for new ethereal wiretap versions
                    Merged ifdefs from Thomas Dettbarn to fix compiling on 
                     some freebsd systems
Feb 28 2004  devel  Changed wtaplocaldump code to have better drive-ful error
                     messages
Feb 26 2004  devel  Smart determination of channel controls on new orinoco
                     drivers, correct exiting of rfmon on new orinoco drivers
                    Added new orinoco capture source orinoco_14 to handle the
                     changes in the new orinoco 0.14 cvs tree
Feb 25 2004  devel  Fixed expat parsing the new kismet version strings
Feb 24 2004  devel  Fixed prism2_legacy (wow, someone still uses this) to trim
                     the FCS off the frames correctly, and to mute the wlanctl
                     commands
                    Added more intelligent error messages for the interface
                     going away in the middle of a capture.
Feb 22 2004  devel  Merged FreeBSD patch from Sam (with some changes):
                     * Renamed to radiotap_fbsd_X (me.  radiotap_freebsd_x was
                       just getting kind of silly to type.)
                     * Split source into ab/a/b, like MadWifi
                     * Trimmed out redundant/unused FetchChannel()
                     * Workaround for varargs for legible error messages
                     * Save and restore interface settings
Feb 20 2004  devel  Added tentative support for the orinoco_cs CVS drivers as
                     part of the existing orinoco source
                    Merged patch from Deker to fix inverse bssid filtering
                    Tweaked wext header finding, added big warning
Feb 13 2004  devel  Reordered stuff in configure for some distros being cranky
Feb 10 2004  devel  Fixed 2 socket closure bugs, neither of which should have