@@ -1,3 +1,7 @@
+Mar 03 2004  devel  Rewrote gpsmap network-center guessing to find groups of
+                     sample points and use those
+                    Started rewriting gpsmap to use GMP for math.  GMP is
+                     now required.
 Mar 01 2004  devel  Tweaked error reporting to client.
                     Fixed wtapfile support for new ethereal wiretap versions
                     Merged ifdefs from Thomas Dettbarn to fix compiling on 
